--- a/spacematters.bib
+++ b/spacematters.bib
@@ -82,6 +82,16 @@
 	pages = {149--169}
 }
 
+@article{FotheringhamWong1991,
+	title = {The modifiable areal unit problem in multivariate statistical analysis},
+	volume = {23},
+    number = {7},
+	journal = {Environment and Planning A},
+	author = {Fotheringham, A. S. and Wong, D. W. S.},
+	year = {1991},
+	pages = {1025-1044}
+}
+
 @article{Gauvinetal2009,
 	title = {Phase diagram of a Schelling segregation model},
 	volume = {70},
@@ -112,6 +122,16 @@
 	pages = {1-6}
 }
 
+@article{Kwan2012,
+	title = {The uncertain geographic context problem},
+	volume = {102},
+    number = {5},
+	journal = {Annals of the Association of American Geographers,
+	author = {Kwan, M.P.},
+	year = {2012},
+	pages = {958-968}
+}
+
 @article{LauriJaggi2003,
 	title = {Role of'vision'in neighbourhood racial segregation: a variant of the {Schelling} segregation model},
 	volume = {40},
@@ -132,7 +152,25 @@
 	journal = {Cybergeo: European Journal of Geography},
 	author = {Le N{\' e}chet, Florent},
 	year = {2015},
-	file = {[HTML] Ã  partir de revues.org:/Users/clementinecottineau/Library/Application Support/Zotero/Profiles/i69s0sxq.default/zotero/storage/EX2IAUZ4/26753.html:text/html}
+	file = {[HTML] From revues.org:/Users/clementinecottineau/Library/Application Support/Zotero/Profiles/i69s0sxq.default/zotero/storage/EX2IAUZ4/26753.html:text/html}
+}
+
+@article{LeTexierCaruso2017,
+	title = {Assessing geographical effects in spatial diffusion processes: The case of euro coins},
+	journal = {Computer, Environment and Urban Systems},
+	author = {Le Texier, Marion and Caruso, Geoffrey},
+	year = {2017},
+	volume = {61},
+    number = {A},
+    pages = {81-93}
+}
+
+@book{Openshaw1984,
+  title={The Modifiable Areal Unit Problem},
+  author={Openshaw, Stan},
+  year={1984},
+  publisher={Geo Books},
+  address={Norwich, UK}
 }
 
 @inproceedings{Raimbault2014,
