--- a/biblio.bib
+++ b/biblio.bib
@@ -2,6 +2,24 @@
 
 
 
+@article{zembri2010new,
+	Author = {Zembri, Pierre},
+	Title = {The new purposes of the French high-speed rail system in the framework of a centralized network: a substitute to the domestic air transport market?},
+	Year = {2010}}
+
+
+
+
+@incollection{pumain2012urban,
+	Author = {Pumain, Denise},
+	Booktitle = {Complexity Theories of Cities Have Come of Age},
+	Pages = {91--103},
+	Publisher = {Springer},
+	Title = {Urban systems dynamics, urban growth and scaling laws: The question of ergodicity},
+	Year = {2012}}
+
+
+
 @phdthesis{schmitt2014modelisation,
   title={Mod{\'e}lisation de la dynamique des syst{\`e}mes de peuplement: de SimpopLocal {\`a} SimpopNet.},
   author={Schmitt, Clara},
